--- a/views/layout.pug
+++ b/views/layout.pug
@@ -4,4 +4,10 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
+    nav
+      ul#navbar
+        li
+          a(href='/') Home
+        li
+          a(href='/login') Users
     block content
