fixed 404, not database

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -9,5 +9,5 @@ html
         li
           a(href='/') Home
         li
-          a(href='/login') Users
+          a(href='/login') Login
     block content
