--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,4 +10,6 @@ html
           a(href='/') Home
         li
           a(href='/login') Login
+        li
+          a(href='/users') Users
     block content
