--- a/views/profile.pug
+++ b/views/profile.pug
@@ -8,7 +8,7 @@ block content
       h3 #{user.email}
     h3 github.com/#{user.username}
   .repos
-    h2 Your first 10 repos.
+    h2 Your selected repos.
     ul
       each repo in repos
         li
