--- a/views/index.pug
+++ b/views/index.pug
@@ -1,7 +1,7 @@
 extends layout
 
 block content
-  h1= "GitHub Profile Parser"
+  h1#title= "GitHub Profile Parser"
   if authorised
     h2 Welcome, #{username}.
     p Please visit the Users page for your profile.
