--- a/views/layout.pug
+++ b/views/layout.pug
@@ -10,4 +10,5 @@ html
           a(href='/') Home
         li
           a(href='/users') Users
-    block content
+    .content
+      block content
