--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,7 @@ extends layout
 
 block content
   h1#title= "Reprofile"
-  h2 GitHub Repo Parser
+  h2.middle GitHub Repo Parser
   if authorised
     h2 Welcome, #{username}.
     p Please visit the Users page for your profile.
